--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,13 @@
             <version>9.2.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.google.inject/guice -->
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>7.0.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
